--- a/AudioProject/Views/Tone/Index.cshtml
+++ b/AudioProject/Views/Tone/Index.cshtml
@@ -11,10 +11,11 @@
 
 <br><br>
 
-<button id="startsound" class="btn btn-outline-info btn-block">begin audio</button>
+<button id="startsound" class="btn btn-info btn-block">begin audio</button>
 
 <br><br><br>
-
+<canvas id="canvas"></canvas>
+<br>
 <h3 style="text-align:center">select chords</h3>
 <hr> <br>
 
@@ -106,10 +107,10 @@
     <div class="slidecontainer">
       <input type="range" min="20" max="300" value="100" class="slider" id="BPMOutput" name="BPMOutput">
     </div>
-    <br>
+    <br><br>
     <div>
-      <label>Save to My Library</label>
-      <input type="submit" value="Add New Sound" class="submit" />
+      
+      <input type="submit" value="Save to Library" class="btn btn-info btn-block" />
     </div>
   }
 }
