--- a/AudioProject/Views/Tone/Index.cshtml
+++ b/AudioProject/Views/Tone/Index.cshtml
@@ -31,6 +31,7 @@
       <input id="chord-3" value="3" type="radio" name="Chords" />
       <input id="chord-4" value="4" type="radio" name="Chords" />
       <input id="chord-5" value="5" type="radio" name="Chords" />
+      <input id="chord-5" value="6" type="radio" name="Chords" />
 
 
       <ul>
