--- a/AudioProject/wwwroot/css/output.css
+++ b/AudioProject/wwwroot/css/output.css
@@ -6,22 +6,22 @@
   left: -999999px;
 }
 .hiddenOverflow input#chord-1:checked ~ ul label[for=chord-1] {
-  background: tomato;
+  background: lightpink;
 }
 .hiddenOverflow input#chord-2:checked ~ ul label[for=chord-2] {
-  background: tomato;
+  background: lightpink;
 }
 .hiddenOverflow input#chord-3:checked ~ ul label[for=chord-3] {
-  background: tomato;
+  background: lightpink;
 }
 .hiddenOverflow input#chord-4:checked ~ ul label[for=chord-4] {
-  background: tomato;
+  background: lightpink;
 }
 .hiddenOverflow input#chord-5:checked ~ ul label[for=chord-5] {
-  background: tomato;
+  background: lightpink;
 }
 .hiddenOverflow input#chord-6:checked ~ ul label[for=chord-6] {
-  background: tomato;
+  background: lightpink;
 }
 .hiddenOverflow ul {
   list-style: none;
