--- a/AudioProject/Views/Tone/Index.cshtml
+++ b/AudioProject/Views/Tone/Index.cshtml
@@ -9,11 +9,11 @@
 @inject SignInManager<ApplicationUser> signInManager
 @inject UserManager<ApplicationUser> userManager
 
-<br><br>
+<br>
 
 <button id="startsound" class="btn btn-info btn-block">begin audio</button>
 
-<br><br><br>
+<br>
 <canvas id="canvas"></canvas>
 <br>
 <h3 style="text-align:center">select chords</h3>
@@ -35,24 +35,43 @@
 
 
       <ul>
-        <li><label for="chord-1">1</label></li>
-        <li><label for="chord-2">2</label></li>
-        <li><label for="chord-3">3</label></li>
-        <li><label for="chord-4">4</label></li>
-        <li><label for="chord-5">5</label></li>
+        <li><label for="chord-1">CM7</label></li>
+        <li><label for="chord-2">FM7 / Dm6</label></li>
+        <li><label for="chord-3">GM</label></li>
+        <li><label for="chord-4">Em</label></li>
+        <li><label for="chord-5">CM7 sus FM7</label></li>
       </ul>
     </div><br><br>
+
+    <div class="slidecontainer1">
+      <p>attack</p>
+      <input type="range" min="1" max="200" value="100" class="slider1" id="attack" name="attack">
+    </div>
+    <div class="slidecontainer1">
+      <p>decay</p>
+      <input type="range" min="1" max="500" value="100" class="slider1" id="decay" name="decay">
+    </div>
+    <div class="slidecontainer1">
+      <p>sustain</p>
+      <input type="range" min="1" max="1000" value="100" class="slider1" id="sustain" name="sustain">
+    </div>
+    <div class="slidecontainer1">
+      <p>release</p>
+      <input type="range" min="1" max="500" value="100" class="slider1" id="release" name="release">
+    </div>
+    <br><br>
+    <hr style='background-color:black; width:50%'><br>
 
     <div class="field">
       <section class="section">
         <span class="select">
           <select id="SynthType" class="form-control" name="SynthType">
             <option value="Synth" selected>Synth</option>
+            <option value="MembraneSynth">MembraneSynth</option>
             <option value="AMSynth">AMSynth</option>
             <option value="FMSynth">FMSynth</option>
-            <option value="PolySynth">PolySynth</option>
             <option value="MonoSynth">MonoSynth</option>
-            <option value="PluckSynth">PluckSynth</option>
+            <option value="PluckSynth">PluckSynth</option> 
           </select>
         </span>
       </section>
@@ -84,14 +103,9 @@
       </select>
     </div>
     <br><br>
-    <p>Volume: <span id="volume-output"></span></p>
-    <div class="slidecontainer">
-      <input type="range" min="50" max="100" value="80" class="slider" id="volume-wet">
-    </div>
-    <br>
     <p>Filter: <span id="filter-output"></span></p>
     <div class="slidecontainer">
-      <input type="range" min="20" max="10000" value="5000" class="slider" id="FilterOutput" name="FilterOutput">
+      <input type="range" min="20" max="5000" value="5000" class="slider" id="FilterOutput" name="FilterOutput">
     </div>
     <br>
     <p>Delay: <span id="delay-output"></span></p>
@@ -115,5 +129,3 @@
     </div>
   }
 }
-
-<p id="mute" data-muted="false" class="btn btn-outline-dark btn-block">mute</p>
